203077 - Rename Firefox profile data folder from Phoenix to Firefox. Make sure the migration FE does not show when the app is launched with -ProfileWizard or -CreateProfile, as these use cases do not imply automigration. for full details see http://bugzilla.mozilla.org/show_bug.cgi?id=203077#c35 r=jst